[project]
name = "mein-buch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.67.0",
    "pandas>=2.2.3",
    "streamlit>=1.43.2",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "transformers>=4.49.0",
    "watchdog>=6.0.0",
]
